Quality checks in src folder

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           echo "stylelint check"
           echo "==============="
-          npx stylelint 'client/**/*.scss'
+          npx stylelint 'src/**/*.scss'
 
           echo "Validate format"
           echo "==============="
