--- a/.github/workflows/deploy-environment.yml
+++ b/.github/workflows/deploy-environment.yml
@@ -50,7 +50,7 @@ jobs:
       uses: 'google-github-actions/upload-cloud-storage@v2.1.0'
       with:
         path: '/pro/deploy/build/'
-        destination: 'platform2-crosstabs-assets-${{ inputs.target_env }}/assets/${{ github.sha }}'
+        destination: 'platform2-crosstabs-${{ inputs.target_env }}/assets/${{ github.sha }}'
         parent: false
         process_gcloudignore: false
 
