Filter out thirdParty errors from Sentry (#16)

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-env": "^7.23.6",
     "@globalwebindex/platform2-lib": "git+ssh://git@github.com/globalwebindex/platform2-lib#v1.6.3",
     "@globalwebindex/platform2-web-components": "git+ssh://git@github.com/globalwebindex/platform2-web-components#v2.2.6",
+    "@sentry/webpack-plugin": "3.5.0",
     "@types/d3": "^7.1.0",
     "@types/webpack-dev-server": "4.7.2",
     "@webcomponents/webcomponentsjs": "^2.6.0",
@@ -86,7 +87,7 @@
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@mui/material": "5.11.4",
-    "@sentry/browser": "7.108.0",
+    "@sentry/browser": "9.26.0",
     "bowser": "^2.11.0",
     "d3scription": "^1.0.1",
     "d3scription-fork": "git+ssh://git@github.com/globalwebindex/d3scription-fork#53c8bb798774a78c4a0d48490a233cdbe49806fe",
