[AUR-1154] FE - [Crosstabs] Add 'sort by' capability for Totals column (#18)
* [AUR-1154] FE - [Crosstabs] Add 'sort by' capability for Totals column

* Working without reload

* Feature access again

* Almost done, check styling and setLoadNotAskedTotal funcs

* Styling issues solved

* setLoadNotAskedTotal function swapped for axis

* Solved tests and big crosstab sorting issue

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "d3-charts": "git+ssh://git@github.com/globalwebindex/d3-charts#4.3.9",
     "d3-charts-2": "git+ssh://git@github.com/globalwebindex/d3-charts#d2-1.0.38",
     "debounce": "^1.2.0",
+    "elm-debug-transformer": "1.2.1",
     "elm-hot-webpack-loader": "^1.1.8",
     "elm-review": "^2.8.2",
     "elm-tooling": "^1.10.0",
