--- a/.github/workflows/sticky-comment.yml
+++ b/.github/workflows/sticky-comment.yml
@@ -18,20 +18,15 @@ jobs:
       group: sticky-comment-${{ github.ref }}
       cancel-in-progress: true
     steps:
-      - name: Set env value with the feature branch
+      - name: Set FEATURE_BRANCH env value
         shell: bash
         run: |
           echo "Branch name is: ${{ github.head_ref }}"
-          [[ "${{ github.head_ref }}" =~ ^(feature|chore|spike|fix)/.* ]] && echo "The branch name matches our feature branch prefixes!" && echo "FEATURE_BRANCH=${{ github.head_ref }}" >> $GITHUB_ENV || exit 0
+          echo "Basename is: $(basename ${{ github.head_ref }})"
+          echo "FEATURE_BRANCH=${{ github.head_ref }}" >> $GITHUB_ENV || exit 0
+          echo "FEATURE_BRANCH_BASENAME=$(basename ${{ github.head_ref }})" >> $GITHUB_ENV || exit 0
 
-      - name: Set env value with the feature branch for P2
-        shell: bash
-        run: |
-          echo "Branch name is: ${{ github.head_ref }}"
-
-          [[ "${{ github.head_ref }}" =~ /(.*)$ ]] && echo "The PR FB after!" && echo "P2_FB=$BASH_REMATCH" >> $GITHUB_ENV || echo "P2_FB=/${{ github.head_ref }}" >> $GITHUB_ENV
-
-      - name: Set env value with the ATC ticket
+      - name: Set TICKET_NUMBER env value by PR_TITLE
         shell: bash
         run: |
           PR_TITLE=$(curl -s \
@@ -42,41 +37,42 @@ jobs:
 
           echo "PR title is: ${PR_TITLE}"
 
-          [[ "${PR_TITLE}" =~ (ATC|UM|AUR|CDA)-[0-9]+ ]] && echo "The PR title matches ATC-* or UM-*!" && echo "TICKET_NUMBER=$BASH_REMATCH" >> $GITHUB_ENV || exit 0
+          [[ "${PR_TITLE}" =~ (ATC|UM|AUR|CDA)-[0-9]+ ]] && echo "The PR title matches '(ATC|UM|AUR|CDA)-[0-9]+'!" && echo "TICKET_NUMBER=$BASH_REMATCH" >> $GITHUB_ENV || exit 0
 
       # FEATURE_BRANCH: no, TICKET_NUMBER: no
       # results in no sticky comment
 
       # FEATURE_BRANCH: yes, TICKET_NUMBER: yes
-      - name: (Re)create a sticky PR comment (both ticket number and feature branch URLs)
+      - name: Create a sticky PR comment (both ticket number and feature branch URLs)
         uses: marocchino/sticky-pull-request-comment@v2
         id: sticky-comment-both
         if: ${{ env.FEATURE_BRANCH && env.TICKET_NUMBER }}
         with:
           message: |
-            Ticket: ${{ env.TICKET_NUMBER }}
-            Feature branches:
-              * testing: https://app-testing.globalwebindex.com/${{ env.TICKET_NUMBER }}
-              * staging: https://app-staging.globalwebindex.com/${{ env.TICKET_NUMBER }}
-              * alpha: https://app-alpha.globalwebindex.com/${{ env.TICKET_NUMBER }}
-              * production: https://app.globalwebindex.com/${{ env.TICKET_NUMBER }}
+            # Ticket: ${{ env.TICKET_NUMBER }}
+
+            | Environment | Link                                                                      |
+            | :---------: | ------------------------------------------------------------------------- |
+            | testing     | https://app-testing.globalwebindex.com/${{ env.FEATURE_BRANCH_BASENAME }} |
+            | alpha       | https://app-alpha.globalwebindex.com/${{ env.FEATURE_BRANCH_BASENAME }}   |
 
       # FEATURE_BRANCH: no, TICKET_NUMBER: yes
-      - name: (Re)create a sticky PR comment (only ticket number)
+      - name: Create a sticky PR comment (only ticket number)
         uses: marocchino/sticky-pull-request-comment@v2
         if: ${{ env.TICKET_NUMBER && steps.sticky-comment-both.conclusion == 'skipped' }}
         with:
           message: |
-            Ticket: ${{ env.TICKET_NUMBER }}
+            # Ticket: ${{ env.TICKET_NUMBER }}
+
+            No feature branches.
 
       # FEATURE_BRANCH: yes, TICKET_NUMBER: no
-      - name: (Re)create a sticky PR comment (only feature branch URLs and P2_FB match)
+      - name: Create a sticky PR comment (only feature branch URLs and P2_FB match)
         uses: marocchino/sticky-pull-request-comment@v2
         if: ${{ env.FEATURE_BRANCH && steps.sticky-comment-both.conclusion == 'skipped' }}
         with:
           message: |
-            Feature branches:
-              * testing: https://app-testing.globalwebindex.com${{ env.P2_FB }}
-              * staging: https://app-staging.globalwebindex.com${{ env.P2_FB }}
-              * alpha: https://app-alpha.globalwebindex.com/${{ env.P2_FB }}
-              * production: https://app.globalwebindex.com${{ env.P2_FB }}
+            | Environment | Link                                                                      |
+            | :---------: | ------------------------------------------------------------------------- |
+            | testing     | https://app-testing.globalwebindex.com/${{ env.FEATURE_BRANCH_BASENAME }} |
+            | alpha       | https://app-alpha.globalwebindex.com/${{ env.FEATURE_BRANCH_BASENAME }}   |
