[AUR-1181] Update saved/crosstabs to the new platform service (#31)
* [AUR-1181] Update saved/crosstabs to the new platform service

* Fix alpha CDN

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
 
   deploy-testing:
     uses: ./.github/workflows/deploy-environment.yml
-    if: ${{ always() && needs.build-docker.result == 'success' && (needs.quality-checks.result == 'success' || needs.quality-checks.result == 'skipped') }}
+    if: ${{ always() && github.ref != 'refs/heads/production' && needs.build-docker.result == 'success' && (needs.quality-checks.result == 'success' || needs.quality-checks.result == 'skipped') }}
     needs: [ build-docker, quality-checks ]
     secrets:
       core_s: ${{ secrets.SA_CORE_CALCULATIONS_S }}
@@ -91,7 +91,7 @@ jobs:
 
   deploy-alpha:
     uses: ./.github/workflows/deploy-environment.yml
-    if: ${{ always() && needs.build-docker.result == 'success' && (needs.quality-checks.result == 'success' || needs.quality-checks.result == 'skipped') }}
+    if: ${{ always() && github.ref != 'refs/heads/production' && needs.build-docker.result == 'success' && (needs.quality-checks.result == 'success' || needs.quality-checks.result == 'skipped') }}
     needs: [ build-docker, quality-checks ]
     secrets:
       core_s: ${{ secrets.SA_CORE_CALCULATIONS_S }}
