--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "terser": "^5.10.0",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "9.5.1",
-    "typescript": "^4.6.2",
+    "typescript": "5.9.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
