Complete Elm to React migration with all enhancements
- Migrated entire codebase from Elm to React
- Implemented all core features: List page, Detail page, Crosstab builder
- Added advanced features: Heatmap, Export, Audience browser integration
- Implemented Phase 1 improvements: Error boundaries, Toast notifications, Loading skeletons, Auto-save, Keyboard shortcuts
- Implemented Phase 2 improvements: Advanced filters, Export preview, Bulk operations, Templates
- Full TypeScript type safety
- Comprehensive testing infrastructure
- Performance optimizations and accessibility improvements

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "private": true,
   "scripts": {
     "start": "make start",
-    "test": "make test",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:elm": "make test",
+    "test:watch:elm": "make test_watch",
+    "test:coverage:elm": "make test_coverage",
     "prepare": "husky",
-    "test:watch": "make test_watch",
-    "test:coverage": "make test_coverage",
     "build": "make build",
     "lint": "make lint",
     "lint:fix": "make lint_fix",
@@ -32,7 +35,11 @@
     "@globalwebindex/platform2-lib": "git+ssh://git@github.com/globalwebindex/platform2-lib#v7.1.0",
     "@globalwebindex/platform2-web-components": "3.1.0",
     "@sentry/webpack-plugin": "3.5.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/d3": "^7.1.0",
+    "@types/jest": "^29.5.11",
     "@types/webpack-dev-server": "4.7.2",
     "@webcomponents/webcomponentsjs": "^2.6.0",
     "autoprefixer": "^10.4.2",
@@ -60,6 +67,8 @@
     "http-server": "14.1.1",
     "husky": "9.1.7",
     "image-webpack-loader": "^8.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.5.2",
     "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
@@ -77,6 +86,7 @@
     "stylelint-config-standard": "^35.0.0",
     "terser": "^5.10.0",
     "terser-webpack-plugin": "^5.3.9",
+    "ts-jest": "^29.1.1",
     "ts-loader": "9.5.1",
     "typescript": "5.9.3",
     "url-loader": "^4.1.1",
